Fix pagination nav on smaller screens.
[Fixes #35]

--- a/css/base.css
+++ b/css/base.css
@@ -452,7 +452,7 @@ div.aligncenter {
 }
 .pagination-nav {
   padding-bottom: 2em;
-  max-width: 600px;
+  max-width: 900px;
 }
 .pagination-nav a {
   margin: 0;
